Revision history for Dist-Zilla-PluginBundle-Author-ETHER

{{$NEXT}}
          - minor fixes to distribution prereqs

0.125     2017-05-21 01:43:09Z
          - fix tests to work on older perls (thanks, [EnsureLatestPerl])
          - [UseUnsafeInc] (with dot_in_INC=0) is only enabled in perls
            compiled with -DDEFAULT_INC_EXCLUDES_DOT.

0.124     2017-05-13 16:34:59Z
          - added [EnsureLatestPerl] to before-release checks
          - added [EnsureUnsafeInc] (with dot_in_INC=0)

0.123     2017-04-27 21:04:35Z
          - bump up prereq for Test::Portability::Files (used by
            [Test::Portability]) for better compliance with ANSI filename
            formats
          - bump up prereq for [VerifyPhases] to get share_map fix
          - added [CheckMetaResources]

0.122     2017-02-03 01:27:46Z
          - properly display ANSI colours on MSWin32 (Roy Ivy Ⅲ)
          - a fake release (one where no PAUSE upload is performed) can now be
            achieved by setting the FAKE_RELEASE environment variable

0.121     2016-10-17 01:38:51Z
          - stop prompting on release when we contain a develop prereq on
            ourselves at the version we are releasing
          - bump the required version of [Git::Contributors], to get the fix
            for attribution commits
          - don't include Test::Pod::No404s under Travis (GitHub #7, Dave Rolsky)

0.120     2016-09-11 00:03:52Z
          - avoid fatal errors on MSWin32 or any system where symlink support
            is not available (see github #5)
          - silence "no bash" warnings during testing
          - respect necessary prereqs for configs provided by plugin roles

0.119     2016-09-04 22:48:25Z
          - Module::Metadata is no longer used as a test prereq (via
            [Test::ReportPrereqs]) if ExtUtils::MakeMaker is the sole
            installer, to avoid adding possibly-unwanted prereqs (Graham Knop)

0.118     2016-08-07 21:59:49Z